force-app/main/default/objects/ffr__ReportingPageTableRow__c/ffr__ReportingPageTableRow__c.object-meta.xml
<CustomObject>
    <customHelpPage>ffr__helpreportingpagetablerow</customHelpPage>
    <label>Reporting Page Table Row</label>
    <nameField>
        <label>Reporting Page Table Row Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reporting Page Table Rows</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>