force-app/main/default/objects/ffr__ReportingPageTableRow__c/fields/ffr__ReportingPageTable__c.field-meta.xml
<CustomField>
    <fullName>ffr__ReportingPageTable__c</fullName>
    <label>Reporting Page Table</label>
    <referenceTo>ffr__ReportingPageTable__c</referenceTo>
    <relationshipLabel>Reporting Page Table Rows</relationshipLabel>
    <relationshipName>ReportingPageTableRows</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>