force-app/main/default/objects/ffr__ReportingPageTableRow__c/fields/ffr__RowTitle__c.field-meta.xml
<CustomField>
    <fullName>ffr__RowTitle__c</fullName>
    <label>Row Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>