force-app/main/default/objects/ffr__ReportingPageTableRow__c/recordTypes/ffr__DataRangeTotal.recordType-meta.xml
<RecordType>
    <fullName>ffr__DataRangeTotal</fullName>
    <active>true</active>
    <description>Use this record type to add a data range total to your reporting table.</description>
    <label>Data Range Total</label>
</RecordType>