force-app/main/default/objects/ffr__ReportingPageTableRow__c/recordTypes/ffr__RowCalculation.recordType-meta.xml
<RecordType>
    <fullName>ffr__RowCalculation</fullName>
    <active>true</active>
    <description>Use this record type to add a row calculation to your reporting table.</description>
    <label>Row Calculation</label>
</RecordType>