force-app/main/default/objects/ffr__ReportingPageTableRow__c/recordTypes/ffr__RowFilter.recordType-meta.xml
<RecordType>
    <fullName>ffr__RowFilter</fullName>
    <active>true</active>
    <description>Use this record type to add a row filter to your reporting table. The default row filter is NONE.</description>
    <label>Row Filter</label>
</RecordType>